set spacing issue and soul issues of images running and cont with section 2 issues

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8625,6 +8625,9 @@ button.bg-dark:focus {
 .top {
   top: 0;
 }
+.left{
+  left: 0;
+}
 .right{
   right: 0;
 }
