--- a/css/index.css
+++ b/css/index.css
@@ -10,8 +10,7 @@
 
 .logo {
     padding: 0;
-    max-width: 153px;
-    margin-right: 4%;
+    margin-right: 0%;
     z-index: 50;
 }
 
@@ -26,7 +25,6 @@
 .logo img {
     max-width: 151px;
     aspect-ratio: 2.8;
-    margin-left: 20px;
 }
 
 .pipe {
@@ -91,17 +89,17 @@ ul li {
     height: 25px;
 }
 
-.header-icon a+a {
+/* .header-icon a+a {
     padding-left: 10px;
     margin-left: 5px;
-}
+} */
 
 .navbar-nav .nav-item {
     position: relative;
 }
 
 .overlay {
-    top: 101px;
+    top: 95px;
     left: 0;
     position: absolute;
     height: 100vh;
@@ -109,6 +107,9 @@ ul li {
     z-index: 1;
     opacity: 0.6;
     background-color: var(--black);
+}
+.image-Slider .swiper-wrapper{
+    transition-timing-function: linear !important;
 }
 
 
@@ -134,7 +135,9 @@ ul li {
     font-family: var(--font-family-karla);
     font-weight: 300;
 }
-
+.row-margin{
+    margin: 0;
+}
 #megamenu .mega {
     margin-top: -5px;
     border: none !important;
@@ -147,11 +150,6 @@ ul li {
     overflow-y: scroll;
 }
 
-.mob-header {
-    padding-left: 10px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
 
 #mobileNav {
     position: absolute;
@@ -197,8 +195,8 @@ ul li {
     display: block;
     top: -8%;
     bottom: 2%;
-    left: 24%;
-    width: 29%;
+    left: 25%;
+    width: 5%;
     height: 29%;
 }
 
@@ -254,15 +252,10 @@ ul li {
     position: static;
     left: 0;
     width: 100%;
-    /* height: 100%; */
 }
 
 .max-widths {
     max-width: 760px;
-}
-
-.wrap-image img {
-    aspect-ratio: 1.05;
 }
 
 .wrap-text {
@@ -271,10 +264,11 @@ ul li {
 }
 
 .wrap-text p {
-    max-width: 500px;
-    padding-bottom: 40px;
+    max-width: 354px;
+    padding-bottom: 27px;
+    margin: 7px;
+    padding-top: 10px;
 }
-
 .banner-cont>.wrap-image>picture>img {
     object-fit: cover;
 }
@@ -296,7 +290,7 @@ ul li {
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 0 5px;
+    padding: 0 4px;
     width: 100%;
     background-color: var(--mob-text-bg-color);
 }
@@ -445,7 +439,7 @@ ul li {
 }
 
 .btn-link-margin {
-    margin-top: 62px;
+    margin-top: -27px;
 }
 
 .beauty-head {
@@ -463,7 +457,7 @@ ul li {
 .m-n15{
     margin: 0 -15px;
 }
-.swiper-button-n a{
+.swiper-button-n{
     top: var(--swiper-navigation-top-offset,50%);
     margin-top: calc(0px - (var(--swiper-navigation-size)/ 2));
     z-index: 10;
@@ -578,8 +572,7 @@ input[type=radio].bg-radio-4 {
 
 .col-12 .sec-6-h3 {
     margin-top: 60px;
-    /* text-align: left; */
-    font-size: 22px;
+    font-size: 21px;
     margin-bottom: 10px;
 }
 
@@ -651,10 +644,6 @@ input[type=radio].bg-radio-4 {
     object-fit: cover;
 }
 
-.hyntimg {
-    max-width: 358px;
-}
-
 #hyntimg::before {
     content: "";
     position: absolute;
@@ -678,19 +667,25 @@ input[type=radio].bg-radio-4 {
     left: -24px;
 }
 
-.image-content-overlay .row {
+.image-content-overlay .row .image-blog {
     padding: 40px 0;
-    margin-left: 11px;
+    margin-left: 22px;
+}
+.image-with-text{
+    max-width: 850px;
+    margin: 20px;
 }
 
 .image-with-text svg {
     margin-bottom: 10px;
     margin-left: 10px;
 }
+.image-content-mw{
+    max-width: 315px;
+}
 
 .w-48 div div:first-child p {
-    max-width: 315px;
-    padding-top: 60px;
+    padding-top: 25px;
     color: var(--copper);
 }
 
@@ -710,10 +705,6 @@ input[type=radio].bg-radio-4 {
 
 .image-on-btn a#btn-skincare {
     padding: 18px 28px;
-}
-
-.key-feature div div {
-    max-width: 276px;
 }
 
 .key-feature p {
@@ -737,7 +728,6 @@ input[type=radio].bg-radio-4 {
 .Subscribe-box ul li:first-child {
     letter-spacing: 0;
 }
-
 .about_us ul li:not(:first-child),
 .customer-care ul li:not(:first-child),
 .Discover-part ul li:not(:first-child),
@@ -748,12 +738,10 @@ input[type=radio].bg-radio-4 {
     font-size: 15px;
     letter-spacing: 0;
 }
-
 .Subscribe-box input {
     padding: 10px 15px 10px 16px;
     border: none;
 }
-
 .Subscribe-box ul li:nth-child(2) {
     line-height: 1.67;
 }
@@ -836,8 +824,6 @@ input[type=radio].bg-radio-4 {
     background-color: #F2DBCF;
     width: 100vw;
     height: 100vh;
-    z-index: 99999;
-    opacity: 0.7;
 }
 
 #closeButton {
@@ -870,9 +856,6 @@ input[type=radio].bg-radio-4 {
 }
 
 
-
-
-
 @media (min-width: 576px) {
 
 
@@ -887,11 +870,6 @@ input[type=radio].bg-radio-4 {
     .h1-font {
         padding-top: 30px;
     }
-
-    .logo img {
-        margin-left: 55px;
-    }
-
     .mobile .icons img {
         margin-left: -25px;
     }
@@ -951,11 +929,6 @@ input[type=radio].bg-radio-4 {
     .max-widths {
         max-width: 760px;
     }
-
-    .wrap-image img {
-        aspect-ratio: 1.4;
-    }
-
     .wrap-text {
         aspect-ratio: 1.4;
         text-align: center;
@@ -972,7 +945,9 @@ input[type=radio].bg-radio-4 {
         font-size: 35px;
 
     }
-
+    .w-48 div div:first-child p {
+        max-width: 560px;
+    }
     .col-12 .sec-6-p {
         text-align: center;
         margin-left: 25%;
@@ -994,11 +969,6 @@ input[type=radio].bg-radio-4 {
     .auto-text {
         max-width: 500px;
     }
-
-    .w-48 div div:first-child p {
-        padding-top: 0px;
-    }
-
     .outline-margin {
         margin-top: 0px;
     }
@@ -1027,10 +997,6 @@ input[type=radio].bg-radio-4 {
         margin-left: 10px;
     }
 
-    .logo img {
-        margin-left: 70px;
-    }
-
     .h1-font {
         font-size: 35px;
         line-height: 1.58;
@@ -1053,11 +1019,6 @@ input[type=radio].bg-radio-4 {
     .max-widths {
         max-width: 760px;
     }
-
-    .wrap-image img {
-        aspect-ratio: 1.8;
-    }
-
     .wrap-text {
         aspect-ratio: 1.8;
         text-align: center;
@@ -1074,10 +1035,13 @@ input[type=radio].bg-radio-4 {
     }
 
     .col-12 .sec-6-p {
-        margin-left: 10%;
+        margin-left: 4%;
     }
     .offset{
         margin-left: 0px;
+    }
+    .w-48 div div:first-child p {
+        max-width: 780px;
     }
 }
 
@@ -1100,6 +1064,9 @@ input[type=radio].bg-radio-4 {
         letter-spacing: 0.05em;
         padding: 6px 0;
         margin: 0 auto;
+    }
+    .logo {
+        margin-right: 4%;
     }
 
     .logo img {
@@ -1132,11 +1099,6 @@ input[type=radio].bg-radio-4 {
         background-color: transparent;
         padding: 0;
     }
-
-    .wrap-image img {
-        aspect-ratio: 0;
-    }
-
     .wrap-text {
         aspect-ratio: 0;
     }
@@ -1150,6 +1112,9 @@ input[type=radio].bg-radio-4 {
     .banner {
         position: relative;
         min-height: 40.07vw;
+    }
+    .banner .wrap-image picture img{
+        object-fit: fill;
     }
 
     .btn-hover {
@@ -1245,11 +1210,16 @@ input[type=radio].bg-radio-4 {
         padding: 18px 35px;
         border: none;
     }
-
+    .w-48 div div:first-child p {
+        padding-top: 0px;
+    }
     #hyntimg::before {
         top: -42px;
         left: -5%;
         height: 118%;
+    }
+    .image-with-text{
+        max-width: 550px;
     }
 
     .w-50 div.position-relative div {
@@ -1307,8 +1277,6 @@ input[type=radio].bg-radio-4 {
         background-color: #F2DBCF;
         width: 100vw;
         height: 100vh;
-        z-index: 99999;
-        opacity: 0.7;
    }
 }
 
